fixing nav on mobile

--- a/PortfolioCSS.css
+++ b/PortfolioCSS.css
@@ -532,12 +532,12 @@ padding-top: 3%;
 
 .navbar{
   width: 100%;
-  justify-content: center;
   padding: 0;
   margin: 0;
   padding-top: 6px;
   padding-bottom: 6px;
-
+  top: auto; 
+  bottom: 0; 
 
 }
 
